# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "config_provider",
    srcs = [
        "config_provider.cc",
        "env_config_provider.cc",
    ],
    hdrs = [
        "config_provider.h",
        "env_config_provider.h",
        "error_codes.h",
    ],
    deps = [
        "//src/core/interface",
        "//src/core/utils:core_utils",
        "//src/public/core/interface:execution_result",
        "@com_google_absl//absl/strings",
        "@nlohmann_json//:lib",
    ],
)

cc_test(
    name = "config_provider_test",
    size = "small",
    srcs = ["config_provider_test.cc"],
    data = ["resources/test_config.json"],
    deps = [
        ":config_provider",
        "//src/public/core:test_execution_result_matchers",
        "//src/public/core/interface:execution_result",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "env_config_provider_test",
    size = "small",
    srcs = ["env_config_provider_test.cc"],
    deps = [
        ":config_provider",
        "//src/public/core:test_execution_result_matchers",
        "//src/public/core/interface:execution_result",
        "@com_google_googletest//:gtest_main",
    ],
)
