# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//src:scp_internal_pkg"])

cc_library(
    name = "http1_curl_client",
    srcs = [
        "http1_curl_client.cc",
        "http1_curl_wrapper.cc",
    ],
    hdrs = [
        "error_codes.h",
        "http1_curl_client.h",
        "http1_curl_wrapper.h",
    ],
    deps = [
        "//src/core/common/operation_dispatcher",
        "//src/core/interface",
        "//src/core/interface:async_context",
        "//src/core/utils:core_utils",
        "//src/public/core/interface:execution_result",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/time",
        "@curl",
    ],
)

cc_test(
    name = "curl_wrapper_test",
    timeout = "short",
    srcs = ["http1_curl_wrapper_test.cc"],
    deps = [
        ":http1_curl_client",
        "//src/core/interface",
        "//src/core/test/utils/http1_helper:test_http1_server",
        "//src/core/utils:core_utils",
        "//src/public/core:test_execution_result_matchers",
        "//src/public/core/interface:execution_result",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "curl_client_test",
    size = "small",
    srcs = ["http1_curl_client_test.cc"],
    deps = [
        ":http1_curl_client",
        "//src/core/async_executor/mock:core_async_executor_mock",
        "//src/core/interface",
        "//src/core/test/utils",
        "//src/core/utils:core_utils",
        "//src/public/core:test_execution_result_matchers",
        "//src/public/core/interface:execution_result",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/time",
        "@com_google_googletest//:gtest_main",
    ],
)
