# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:private"])

cc_library(
    name = "interface_lib",
    hdrs = [
        "async_executor_interface.h",
        "authorization_proxy_interface.h",
        "authorization_service_interface.h",
        "blob_storage_provider_interface.h",
        "config_provider_interface.h",
        "configuration_keys.h",
        "credentials_provider_interface.h",
        "dependency_injection_service_interface.h",
        "http_client_interface.h",
        "http_request_response_auth_interceptor_interface.h",
        "http_request_route_resolver_interface.h",
        "http_request_router_interface.h",
        "http_server_interface.h",
        "http_types.h",
        "initializable_interface.h",
        "message_router_interface.h",
        "network_service_interface.h",
        "partition_interface.h",
        "partition_lease_manager_interface.h",
        "partition_manager_interface.h",
        "partition_namespace_interface.h",
        "partition_types.h",
        "rpc_service_context_interface.h",
        "token_fetcher_interface.h",
        "traffic_forwarder_interface.h",
    ],
    visibility = ["//src:scp_internal_pkg"],
    deps = [
        ":async_context_lib",
        ":service_interface_lib",
        ":streaming_context_lib",
        "//src/core/common/concurrent_map/src:concurrent_map_lib",
        "//src/core/common/proto:core_common_proto_lib",
        "//src/core/common/streaming_context/src:streaming_context_errors_lib",
        "//src/core/common/uuid/src:uuid_lib",
        "@com_google_absl//absl/container:btree",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/functional:any_invocable",
    ],
)

cc_library(
    name = "service_interface_lib",
    hdrs = [
        "service_interface.h",
    ],
    visibility = ["//src:scp_internal_pkg"],
    deps = [
    ],
)

cc_library(
    name = "async_context_lib",
    hdrs = [
        "async_context.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/core/common/global_logger/src:global_logger_lib",
        "//src/core/common/uuid/src:uuid_lib",
    ],
)

cc_library(
    name = "streaming_context_lib",
    hdrs = [
        "streaming_context.h",
    ],
    deps = [
        ":async_context_lib",
        "//src/core/common/concurrent_queue/src:concurrent_queue_lib",
        "//src/core/common/global_logger/src:global_logger_lib",
        "//src/core/common/uuid/src:uuid_lib",
    ],
)

cc_library(
    name = "type_def_lib",
    hdrs = [
        "type_def.h",
    ],
    visibility = ["//src:scp_internal_pkg"],
    deps = [
        "//src/core/common/proto:core_common_proto_lib",
    ],
)

cc_library(
    name = "errors_lib",
    srcs = [
        "errors.cc",
    ],
    hdrs = [
        "errors.h",
    ],
    visibility = ["//src:scp_internal_pkg"],
    deps = [
        "//src/public/core/interface:execution_result",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)
