load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "common",
    hdrs = ["common.h"],
    deps = [
        "@com_google_absl//absl/container:btree",
    ],
)

cc_library(
    name = "buyer_key_value_async_http_client",
    hdrs = [
        "buyer_key_value_async_http_client.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        "//src/clients/async_client:async_http_client",
    ],
)

cc_library(
    name = "seller_key_value_async_http_client",
    hdrs = [
        "seller_key_value_async_http_client.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        "//src/clients/async_client:async_http_client",
    ],
)
