# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_proto_library", "cc_test")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "message_router",
    srcs = ["message_router.cc"],
    hdrs = [
        "error_codes.h",
        "message_router.h",
    ],
    deps = [
        "//src/core/interface",
        "//src/core/interface:async_context",
        "@com_google_protobuf//:protobuf",
    ],
)

proto_library(
    name = "test_proto",
    srcs = ["test.proto"],
)

cc_proto_library(
    name = "test_cc_proto",
    deps = [":test_proto"],
)

cc_test(
    name = "message_router_test",
    size = "small",
    srcs = ["message_router_test.cc"],
    deps = [
        ":message_router",
        ":test_cc_proto",
        "//src/core/common/concurrent_queue",
        "//src/core/interface",
        "//src/public/core:test_execution_result_matchers",
        "@com_google_absl//absl/functional:any_invocable",
        "@com_google_absl//absl/synchronization",
        "@com_google_googletest//:gtest_main",
        "@com_google_protobuf//:protobuf",
    ],
)

buf_lint_test(
    name = "test_proto_lint",
    size = "small",
    config = "//src:buf.yaml",
    targets = [":test_proto"],
)
