# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//src:scp_internal_pkg"])

cc_library(
    name = "test",
    hdrs = [
        "scp_test_base.h",
        "test_config.h",
    ],
    deps = [
        "@com_google_googletest//:gtest",
    ],
)

cc_test(
    name = "service_interface_test",
    size = "small",
    srcs = ["service_interface_test.cc"],
    deps = [
        "//src/core/interface",
        "//src/public/core/interface:execution_result",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "errors_test",
    size = "small",
    srcs = ["errors_test.cc"],
    deps = [
        "//src/core/common/concurrent_queue",
        "//src/core/http2_client:errors",
        "//src/core/interface",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "type_def_test",
    size = "small",
    srcs = ["type_def_test.cc"],
    deps = [
        "//src/core/interface:type_def",
        "@com_google_googletest//:gtest_main",
    ],
)
