# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "core_utils",
    srcs = [
        "base64.cc",
        "error_utils.cc",
        "hashing.cc",
        "http.cc",
    ],
    hdrs = [
        "base64.h",
        "error_codes.h",
        "error_utils.h",
        "hashing.h",
        "http.h",
    ],
    deps = [
        "//src/core/interface",
        "//src/core/interface:type_def",
        "//src/public/core/interface:execution_result",
        "@boringssl//:crypto",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@curl",
    ],
)

cc_test(
    name = "core_utils_test",
    size = "small",
    srcs = [
        "base64_test.cc",
        "error_utils_test.cc",
        "hashing_test.cc",
    ],
    deps = [
        ":core_utils",
        "//src/core/interface",
        "//src/public/core:test_execution_result_matchers",
        "//src/public/core/interface:execution_result",
        "@com_google_googletest//:gtest_main",
    ],
)
