# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_proto_grpc//:defs.bzl", "proto_plugin")
load("//src/cpio/documentation:cpio_docs.bzl", "templates_dir")

go_library(
    name = "docs_plugin_lib",
    srcs = ["protoc_template_plugin.go"],
    embedsrcs = glob(["tmpl/*"]),
    importpath = "github.com/privacysandbox/data-plane-shared/cpio/documentation/cmd",
    x_defs = {
        "tmplSymlink": templates_dir,
    },
    deps = [
        "//src/roma/tools/api_plugin/cmd:lib",
        "@com_github_pseudomuto_protoc_gen_doc//:go_default_library",
        "@com_github_pseudomuto_protoc_gen_doc//extensions:go_default_library",
        "@com_github_pseudomuto_protokit//:go_default_library",
    ],
)

go_binary(
    name = "docs_plugin",
    embed = [
        ":docs_plugin_lib",
    ],
)

proto_plugin(
    name = "proto_gen_md",
    outputs = ["{basename}-protobuf.md"],
    tool = ":docs_plugin",
    visibility = [
        "//docs/cpio/protobuf:__pkg__",
    ],
)
